--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+
 body {
     height: 100vh;
     margin: 0;
     padding: 0;
+    font-family: 'Roboto', sans-serif;
 }
 
 .container {
@@ -12,8 +15,72 @@ body {
 }
 
 .sidebar {
-    background-color: lightskyblue;
+    background-color: rgb(25, 146, 212);
+    color: white;
+    padding: 30px;
     grid-area: 1 / 1 / 3 / 2;
+}
+
+.sb-logo-grid {
+    display: grid;
+    grid-template-rows: 15px 6px 15px;
+    grid-template-columns: 25px 25px;
+    gap: 6px;
+}
+
+.sb-logo1 {
+    grid-area: 1 / 1 / 3 / 2;
+    background-color: white;
+}
+
+.sb-logo2 {
+    grid-area: 1 / 2 / 2 / 3;
+    background-color: white;
+}
+
+.sb-logo3 {
+    grid-area: 3 / 1 / 4 / 2;
+    background-color: white;
+}
+
+.sb-logo4 {
+    grid-area: 2 / 2 / 4 / 3;
+    background-color: white;
+}
+
+.sb-title {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 20px;
+}
+
+.sb-nav {
+    display: grid;
+    grid-template-rows: repeat(6, 50px);
+    grid-template-columns: auto;
+    font-size: 1.5rem;
+    font-weight: bold;
+    justify-content: start;
+    margin-top: 40px;
+}
+
+.sb-ctrl {
+    display: grid;
+    grid-template-rows: repeat(3, 50px);
+    grid-template-columns: auto;
+    font-size: 1.5rem;
+    font-weight: bold;
+    justify-content: start;
+}
+
+.sb-links {
+    display: grid;
+    gap: 40px;
+}
+
+.header {
+    box-shadow: 0 0 18px #bfbfbf;
 }
 
 .main-content {
@@ -46,4 +113,9 @@ body {
     background-color: #444;
     border: 1px solid pink;
     border-radius: 10px;
+}
+
+h1 {
+    margin: 0;
+    font-size: 2em;
 }
