--- a/style.css
+++ b/style.css
@@ -176,34 +176,57 @@ input {
 
 .main-content {
     background-color: #f1f5f9;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 20px;
+    display: grid;
+    grid-template-rows: repeat(2, auto-fit(300px, 1fr));
+    grid-template-columns: repeat(3, auto-fit(200px, 1fr));
+    gap: 2rem;
+    padding: 20px;
+    
 }
 
 .projects-grid {
-    height: 100%;
     display: grid;
-    grid-template-rows: 200px 200px 200px;
-    grid-template-columns: 300px 300px;
-    gap: 20px;
-    align-content: center;
+    grid-template-rows: repeat(2, minmax(250px, 1fr));
+    grid-template-columns: repeat(3, 300px);
+    gap: 2rem;
+    
+    justify-content: start;
+}
+
+.main-cards {
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+    grid-template-columns: 1fr 300px;
+    overflow: auto;
 }
 
 .extras-grid {
-    height: 100%;
     display: grid;
-    grid-template-rows: 300px 300px;
-    grid-template-columns: 200px;
-    align-content: center;
-    gap: 20px;
+    grid-template-rows: auto;
+    grid-template-columns: 250px;
+    gap: 2rem;
 }
 
 .grid-item, .announcements, .trending {
-    background-color: #444;
-    border: 1px solid pink;
+    background-color: white;
+    border-left: 10px solid orange;
+    box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
     border-radius: 10px;
+    padding: 20px;
+}
+
+.card-title {
+    font-size: 1.3em;
+    font-weight: bold;
+}
+
+.card-content {
+    font-size: 1em;
+    color: rgb(123, 123, 123);
+}
+
+.card-title, .card-content {
+    margin: 0;
 }
 
 h1 {
