--- a/style.css
+++ b/style.css
@@ -111,6 +111,7 @@ body {
     height: 70px;
     width: 70px;
     border-radius: 50px;
+    margin: 0;
 }
 
 .profile-text {
@@ -181,22 +182,26 @@ input {
     grid-template-columns: repeat(3, auto-fit(200px, 1fr));
     gap: 2rem;
     padding: 20px;
-    overflow: scroll;    
+    overflow: auto;    
 }
 
 .projects-grid {
     display: grid;
-    grid-template-rows: repeat(2, minmax(250px, 1fr));
+    grid-template-rows: repeat(2, minmax(200px, 1fr));
     grid-template-columns: repeat(3, 300px);
     gap: 2rem;
-    
     justify-content: start;
+    width: 100%;
+}
+
+.your-projects {
+    width: 200px;
 }
 
 .main-cards {
     display: grid;
-    grid-template-rows: 1fr 1fr;
-    grid-template-columns: 1fr 300px;
+    grid-template-rows: 0.1fr 0.1fr;
+    grid-template-columns: 1fr 350px;
 }
 
 .extras-grid {
@@ -220,6 +225,24 @@ input {
     padding: 20px;   
 }
 
+.announcements, .trending {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    gap: 10px;
+    width: 250px;
+}
+
+.trending .card-title {
+    margin: 0;
+    font-size: 1.2em;
+}
+
+.trending p {
+    margin: 0;
+    font-size: 1em;
+}
+
 .grid-item {
     display: flex;
     flex-direction: column;
@@ -227,12 +250,16 @@ input {
 }
 
 .card-title {
-    font-size: 1.3em;
+    font-size: 1.6em;
     font-weight: bold;
 }
 
+ul .card-title {
+    font-size: 1.3em;
+}
+
 .card-content {
-    font-size: 1em;
+    font-size: 1.2em;
     color: rgb(123, 123, 123);
 }
 
